// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Templates/ObjectTemplate Custom Field Wrapper 1`] = `
Array [
  <div
    style={
      Object {
        "textTransform": "uppercase",
      }
    }
  >
    Joshua
  </div>,
  "Jenkins",
  "9",
  <time
    dateTime="2019-04-21T09:24:38.262+00:00"
    title="April 21, 2019, 9:24:38 AM UTC"
  >
    April 21, 2019
  </time>,
]
`;

exports[`Storyshots Templates/ObjectTemplate Default No Op 1`] = `
Array [
  "Joshua",
  "Jenkins",
  "9",
  <time
    dateTime="2019-04-21T09:24:38.262+00:00"
    title="April 21, 2019, 9:24:38 AM UTC"
  >
    April 21, 2019
  </time>,
]
`;

exports[`Storyshots Templates/ObjectTemplate Duplicate Fields 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Joshua
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jenkins
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    9
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime="2019-04-21T09:24:38.262+00:00"
      title="April 21, 2019, 9:24:38 AM UTC"
    >
      April 21, 2019
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Epoch Time
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    1555838678262
  </dd>
</dl>
`;

exports[`Storyshots Templates/ObjectTemplate Nested Data 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name First
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Milan
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name Last
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jenkins
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime="2019-04-21T09:24:38.262+00:00"
      title="April 21, 2019, 9:24:38 AM UTC"
    >
      April 21, 2019
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    9
  </dd>
</dl>
`;

exports[`Storyshots Templates/ObjectTemplate Null Data 1`] = `"No data received"`;

exports[`Storyshots Templates/ObjectTemplate Object Template 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Joshua
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jenkins
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    9
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime="2019-04-21T09:24:38.262+00:00"
      title="April 21, 2019, 9:24:38 AM UTC"
    >
      April 21, 2019
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Templates/ObjectTemplate Out Of Order 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jenkins
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Joshua
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime="2019-04-21T09:24:38.262+00:00"
      title="April 21, 2019, 9:24:38 AM UTC"
    >
      April 21, 2019
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    9
  </dd>
</dl>
`;

exports[`Storyshots Templates/ObjectTemplate Raw Html Wrappers 1`] = `
<ul>
  <li>
    <ul>
      <li>
        Joshua
      </li>
      <li>
        Jenkins
      </li>
      <li>
        9
      </li>
      <li>
        <time
          dateTime="2019-04-21T09:24:38.262+00:00"
          title="April 21, 2019, 9:24:38 AM UTC"
        >
          April 21, 2019
        </time>
      </li>
    </ul>
  </li>
</ul>
`;
